# RFID_Reader_

./: README.md
HID_Version/MyReaderForLinux_hid/: CMakeLists.txt  ConvertData.cpp  ConvertData.h  DES.cpp  DES.h  HidrawManager.cpp  HidrawManager.h  MyReaderForLinux.cpp  ProtocolPacket_RFID.cpp  ProtocolPacket_RFID.h  Tools.cpp
HID_Version/ReaderForLinux_hid/: CMakeLists.txt  CSerialPort.cpp  CSerialPort.h  ConvertData.cpp  ConvertData.h  DES.cpp  DES.h  HidrawManager.cpp  HidrawManager.h  ProtocolPacket_RFID.cpp  ProtocolPacket_RFID.h  ProtocolPacket_TMCM.cpp  ProtocolPacket_TMCM.h  ProtocolPacket_XMT.cpp  ProtocolPacket_XMT.h  ReaderForLinux.cpp  ReaderForLinux.h  Tools.cpp  Tools.h
SerialPort_Version/MyReaderForLinux/: CMakeLists.txt  CSerialPort.cpp  CSerialPort.h  ConvertData.cpp  ConvertData.h  MyReaderForLinux.cpp  ProtocolPacket.cpp  ProtocolPacket.h  Tools.h
